# rustmission

./: .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: release.yml
changelogs/: 0.5.0.md
magnetease/: Cargo.toml
magnetease/examples/: api.bak
magnetease/src/: lib.rs  magnetease.rs
magnetease/src/providers/: knaben.rs  mod.rs
rm-color/: Cargo.toml
rm-color/src/: lib.rs
rm-config/: Cargo.toml
rm-config/defaults/: categories.toml  config.toml  keymap.toml
rm-config/src/: categories.rs  color.rs  keymap.rs  lib.rs  logging.rs  main_config.rs  utils.rs
rm-config/src/keymap/: mod.rs
rm-config/src/keymap/actions/: general.rs  mod.rs  search_tab.rs  torrents_tab.rs  torrents_tab_file_viewer.rs
rm-config/src/main_config/: connection.rs  general.rs  icons.rs  mod.rs  search_tab.rs  torrents_tab.rs
rm-main/: Cargo.toml
rm-main/src/: action.rs  app.rs  cli.rs  main.rs  transmission.rs  tui.rs  utils.rs
rm-main/src/cli/: add_torrent.rs  fetch_rss.rs  mod.rs
rm-main/src/components/torrent_tab/: mod.rs  task.rs
rm-main/src/transmission/: action.rs  fetchers.rs  mod.rs  utils.rs
rm-main/src/tui/: app.rs  app_key_event.rs  ctx.rs  main_window.rs  mod.rs  terminal.rs
rm-main/src/tui/components/: input_manager.rs  misc.rs  mod.rs  table.rs  tabs.rs
rm-main/src/tui/global_popups/: error.rs  help.rs  mod.rs
rm-main/src/tui/tabs/: mod.rs
rm-main/src/tui/tabs/search/: bottom_bar.rs  mod.rs
rm-main/src/tui/tabs/search/popups/: mod.rs  providers.rs
rm-main/src/tui/tabs/torrents/: bottom_stats.rs  input_manager.rs  mod.rs  rustmission_torrent.rs  table_manager.rs  task_manager.rs
rm-main/src/tui/tabs/torrents/popups/: details.rs  files.rs  mod.rs  stats.rs
rm-main/src/tui/tabs/torrents/popups/files/: mod.rs  priority_popup.rs
rm-main/src/tui/tabs/torrents/tasks/: add_magnet.rs  change_category.rs  default.rs  delete_torrent.rs  filter.rs  mod.rs  move_torrent.rs  rename.rs  selection.rs  sort.rs  status.rs
rm-main/src/tui/ui/: mod.rs
rm-main/src/tui/ui/components/: table.rs
rm-main/src/tui/ui/global_popups/: error.rs  help.rs
rm-main/src/tui/ui/tabs/search/: bottom_bar.rs  mod.rs
rm-main/src/tui/ui/tabs/search/popups/: mod.rs  providers.rs
rm-main/src/tui/ui/tabs/torrents/: bottom_stats.rs  input_manager.rs  mod.rs  table_manager.rs  task_manager.rs
rm-main/src/tui/ui/tabs/torrents/popups/: files.rs  mod.rs  stats.rs
rm-main/src/tui/ui/tabs/torrents/tasks/: add_magnet.rs  default.rs  delete_torrent.rs  filter.rs  move_torrent.rs  status.rs
rm-main/src/ui/: mod.rs  popup.rs  search_tab.rs
rm-main/src/ui/components/: mod.rs  tabcomponent.rs  table.rs  tabs.rs
rm-main/src/ui/components/torrent_tab/: mod.rs  task.rs  task_manager.rs
rm-main/src/ui/components/torrent_tab/tasks/: add_magnet.rs  delete_torrent.rs
rm-main/src/ui/global_popups/: error.rs  help.rs  mod.rs
rm-main/src/ui/tabs/: search.rs  torrents.rs
rm-main/src/ui/tabs/search/: bottom_bar.rs  mod.rs
rm-main/src/ui/tabs/search/popups/: mod.rs  providers.rs
rm-main/src/ui/tabs/torrents/: bottom_stats.rs  input_manager.rs  mod.rs  rustmission_torrent.rs  stats.rs  table_manager.rs  task_manager.rs  torrents.rs
rm-main/src/ui/tabs/torrents/popups/: files.rs  info.rs  mod.rs  stats.rs
rm-main/src/ui/tabs/torrents/tasks/: add_magnet.rs  default.rs  delete_torrent.rs  filter.rs  mod.rs  move_torrent.rs  status.rs
rm-shared/: Cargo.toml
rm-shared/src/: action.rs  current_window.rs  event.rs  header.rs  lib.rs  rustmission_torrent.rs  status_task.rs  utils.rs
rustmission/: Cargo.toml
rustmission/src/: app.rs  main.rs  transmission.rs  tui.rs
rustmission/src/components/: mod.rs  table.rs  torrent_tab.rs
rustmission/src/components/torrent_tab/: mod.rs  task.rs
src/: app.rs  main.rs  tui.rs
src/components/: mod.rs  tabcomponent.rs  torrent_tab.rs
