[workspace]
resolver = "2"
members = [
  "rm-main",
  "rm-config",
]

[workspace.package]
version = "0.3.3"
edition = "2021"
authors = ["Remigiusz Micielski <rmicielski@purelymail.com>"]
repository = "https://github.com/intuis/rustmission"
homepage = "https://github.com/intuis/rustmission"
license = "GPL-3.0-or-later"

[workspace.dependencies]
rm-config = { version = "0.3", path = "rm-config" }

magnetease = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
transmission-rpc = "0.4.2"
fuzzy-matcher = "0.3.7"
clap = { version = "4.5.6", features = ["derive"] }
base64 = "0.22"
xdg = "2.5"
url = "2.5"
toml = "0.8"
rss = "2.0.8"
reqwest = "0.12.5"
regex = "1.10.5"

# Async
tokio = { version = "1", features = ["macros", "sync"] }
tokio-util = "0.7"
futures = "0.3"

# TUI
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = { version = "0.26", features = ["serde"] }
tui-input = "0.8"
tui-tree-widget = "0.20"
throbber-widgets-tui = "0.5.0"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "intuis/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true

[profile.release]
opt-level = 3
strip = "symbols"
codegen-units = 1
lto = "fat"
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
