[package]
name = "magnetease"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11" }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"
