[package]
name = "rm-config"
version = "0.3.0"
edition = "2021"
description = "Config library for rustmission"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "2.5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
url = "2.5"
ratatui = "0.27.0-alpha.4"
