[package]
name = "rustmission"
version = "0.3.0"
edition = "2021"
description = "TUI for Transmission daemon"
repository = "https://github.com/intuis/rustmission"
homepage = "https://github.com/intuis/rustmission"
license = "GPL-3.0-or-later"

[[bin]]
name = "rustmission"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rm-config = { version = "0.3", path = "../rm-config" }

magnetease = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
transmission-rpc = "0.4.2"
fuzzy-matcher = "0.3.7"
clap = { version = "4.5.6", features = ["derive"] }
base64 = "0.22"

# Async
tokio = { version = "1", features = ["macros", "sync"] }
tokio-util = "0.7"
futures = "0.3"

# TUI
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = "0.26.3"
tui-input = "0.8"
tui-tree-widget = "0.20"
