[package]
name = "rustmission"
version = "0.4.3"
edition = "2021"
description = "TUI for Transmission daemon"
repository = "https://github.com/intuis/rustmission"
homepage = "https://github.com/intuis/rustmission"
license = "GPL-3.0-or-later"

[[bin]]
name = "rustmission"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rm-config.workspace = true
rm-shared.workspace = true
magnetease.workspace = true
anyhow.workspace = true
serde.workspace = true
transmission-rpc.workspace = true
fuzzy-matcher.workspace = true
clap.workspace = true
base64.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tui-input.workspace = true
tui-tree-widget.workspace = true
rss.workspace = true
reqwest.workspace = true
regex.workspace = true
throbber-widgets-tui.workspace = true 
chrono.workspace = true
