[package]
name = "rustmission"
description = "TUI for Transmission daemon"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "rustmission"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rm-config.workspace = true
rm-shared.workspace = true
magnetease.workspace = true
anyhow.workspace = true
serde.workspace = true
transmission-rpc.workspace = true
fuzzy-matcher.workspace = true
clap.workspace = true
base64.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tui-input.workspace = true
tui-tree-widget.workspace = true
rss.workspace = true
reqwest.workspace = true
regex.workspace = true
throbber-widgets-tui.workspace = true 
chrono.workspace = true
open.workspace = true
