[package]
name = "rm-shared"
description = "shared things for rustmission"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm.workspace = true
transmission-rpc.workspace = true
magnetease.workspace = true
ratatui.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
